tests/expectations/compiler/constants/decreasing_constant_loop_bound_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ELUN0379000]: The loop range must be increasing.
    --> compiler-test:6:26
     |
   6 |         const STOP: u8 = 0u8;
     |                          ^^^
"""]
